external-crates/move/crates/move-compiler/tests/development/typing/signed_int_constants.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_constants.move:5:22
  │
5 │     const C_I8: i8 = 42i8;
  │                      ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_constants.move:6:24
  │
6 │     const C_I16: i16 = 1000i16;
  │                        ^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_constants.move:7:24
  │
7 │     const C_I32: i32 = 100000i32;
  │                        ^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_constants.move:8:24
  │
8 │     const C_I64: i64 = 1000000i64;
  │                        ^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_constants.move:9:26
  │
9 │     const C_I128: i128 = 1000000000000i128;
  │                          ^^^^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_constants.move:12:27
   │
12 │     const ZERO_I64: i64 = 0i64;
   │                           ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_constants.move:15:24
   │
15 │     const MAX_I8: i8 = 127i8;
   │                        ^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_constants.move:16:26
   │
16 │     const MAX_I16: i16 = 32767i16;
   │                          ^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_constants.move:17:26
   │
17 │     const MAX_I32: i32 = 2147483647i32;
   │                          ^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_constants.move:18:26
   │
18 │     const MAX_I64: i64 = 9223372036854775807i64;
   │                          ^^^^^^^^^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_constants.move:21:27
   │
21 │     const NEG_ONE: i64 = -1i64;
   │                           ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_constants.move:22:29
   │
22 │     const NEG_MAX_I8: i8 = -127i8;
   │                             ^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_constants.move:25:23
   │
25 │     const EXPR: i64 = 10i64 + 20i64;
   │                       ^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_constants.move:26:24
   │
26 │     const EXPR2: i32 = 100i32 - 50i32;
   │                        ^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_constants.move:27:24
   │
27 │     const EXPR3: i16 = 6i16 * 7i16;
   │                        ^^^^^^^^^^^ Signed integer types are under development
